--- a/requirements.txt
+++ b/requirements.txt
@@ -71,8 +71,8 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 matplotlib-venn==0.11.5
 mistune==0.8.4
-mkl-fft
-mkl-random
+mkl-fft==1.0.12
+mkl-random=1.0.1
 more-itertools==6.0.0
 mpl-scatter-density==0.5
 msgpack==0.6.1
