--- a/requirements.txt
+++ b/requirements.txt
@@ -71,7 +71,7 @@ MarkupSafe==1.1.1
 matplotlib==3.0.3
 matplotlib-venn==0.11.5
 mistune==0.8.4
-mkl-fft==1.0.12
+mkl-fft>=1.0.6
 mkl-random==1.0.1
 more-itertools==6.0.0
 mpl-scatter-density==0.5
