--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ more-itertools==7.2.0
 nbconvert==5.5.0
 nbformat==4.4.0
 notebook==6.0.0
-numpy==1.17.1
+numpy>=1.17.1
 omicsone==0.2
 packaging==19.1
 pandas==0.25.1
