--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ nbconvert==5.5.0
 nbformat==4.4.0
 notebook==6.0.0
 numpy>=1.17.1
-#omicsone==0.2
+omicsone>=0.2
 packaging==19.1
 pandas==0.25.1
 pandocfilters==1.4.2
