--- a/requirements.txt
+++ b/requirements.txt
@@ -110,7 +110,7 @@ requests==2.26.0
 requests-cache==0.7.2
 requests-unixsocket==0.2.0
 retrying==1.3.3
-rpy2==3.4.5
+rpy2
 scikit-learn==0.24.2
 scikit-plot==0.3.7
 scipy==1.5.4
