--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyter-dash==0.4.0
 jupyter-server==1.10.1
-jupyterlab==3.0.16
+jupyterlab>=3.0.17
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.6.1
 kiwisolver==1.3.1
@@ -77,7 +77,7 @@ nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
-notebook==6.4.0
+notebook>=6.4.1
 numpy==1.19.5
 openpyxl==3.0.7
 packaging==21.0
